--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
-
       <div class="track-state">
         <div class="track-name"></div>
-        <div class="track-bar">
-          <div class="track-controller"></div>
+        <div class="track-listener">
+          <div class="track-bar">
+            <div class="track-controller"></div>
+          </div>
         </div>
         <div class="timer">
           <div class="current-time"></div>/<div class="duration-time"></div>
@@ -43,8 +44,10 @@
           <path class="circle_lg" fill="none" stroke="#fff" stroke-width="22" stroke-linecap="round" stroke-miterlimit="10" d="M640.838,142.911
         c0,0,168.676,15.663,168.676,221.688c0,206.024-170.985,225.704-212.049,225.704c-41.064,0-212.451-26.556-212.451-224.926
         S559.15,139.698,596.73,139.698c37.582,0-192.841,430.925-192.841,430.925"></path></svg>
-        <div class="volume-bar">
-          <div class="volume-controller"></div>
+        <div class="volume-listener">
+          <div class="volume-bar">
+            <div class="volume-controller"></div>
+          </div>
         </div>
       </div>
       <ul class="play-list"></ul>
